# sitrep

./: .dockerignore  Architecture.md  Cargo.toml  Dockerfile  LICENSE  README.md  why.md
src/: cli.rs  controller.rs  docker.rs  docker_controller.rs  layout.rs  lib.rs  main.rs  model.rs  swarm.rs  swarm_controller.rs  view.rs
src/app/: event_loop.rs  input.rs  mod.rs  render.rs  state.rs
src/collectors/: linux.rs  mac.rs  mod.rs
src/controller/: mod.rs  process.rs
src/model/: app.rs  docker.rs  mod.rs  swarm.rs  system.rs
src/view/: confirmation.rs  containers.rs  logs.rs  mod.rs  shared.rs  splash.rs  swarm.rs  system.rs  tab_bar.rs  theme.rs
tests/: integration_test.rs
